[gd_scene load_steps=32 format=2]

[ext_resource path="res://level4res/Mundo4.gd" type="Script" id=1]
[ext_resource path="res://cannon_cart.tscn" type="PackedScene" id=2]
[ext_resource path="res://floor.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/wood/h_wood_plank_1.png" type="Texture" id=4]
[ext_resource path="res://sprites/wood/h_wood_plank_2.png" type="Texture" id=5]
[ext_resource path="res://Tools/MouseSpawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://aple.tscn" type="PackedScene" id=7]
[ext_resource path="res://banana.tscn" type="PackedScene" id=8]
[ext_resource path="res://bottle.tscn" type="PackedScene" id=9]
[ext_resource path="res://can.tscn" type="PackedScene" id=10]
[ext_resource path="res://trashbag.tscn" type="PackedScene" id=11]
[ext_resource path="res://level4res/Trash_bins.gd" type="Script" id=12]
[ext_resource path="res://sprites/simple_trash_bin/simple_trash_bin.png" type="Texture" id=13]
[ext_resource path="res://fonts/montserrat_24.tres" type="DynamicFont" id=14]
[ext_resource path="res://sprites/simple_trash_bin/simple_trash_bin_2.png" type="Texture" id=15]
[ext_resource path="res://sprites/speech_bubble/speech_bubble.png" type="Texture" id=16]
[ext_resource path="res://level4res/speechbubble.gd" type="Script" id=17]
[ext_resource path="res://level4res/time_left.gd" type="Script" id=18]
[ext_resource path="res://level_cleared_window.tscn" type="PackedScene" id=19]
[ext_resource path="res://reset_exit_window.tscn" type="PackedScene" id=20]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( -212.258, -16.2642 )
b = Vector2( 216.838, -17.0863 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( 220.978, 33.2124 )
b = Vector2( -220.63, 34.9602 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( 1274.98, 11.1651 )
b = Vector2( 1274.69, 429.507 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 34.6292, 4.57233 )

[sub_resource type="CircleShape2D" id=5]

[sub_resource type="CircleShape2D" id=6]

[sub_resource type="SegmentShape2D" id=7]
a = Vector2( 129.102, 50.3024 )
b = Vector2( 172.257, 317.397 )

[sub_resource type="SegmentShape2D" id=8]
a = Vector2( 398.529, 51.4687 )
b = Vector2( 355.374, 318.563 )

[sub_resource type="SegmentShape2D" id=9]
a = Vector2( 357.707, 317.397 )
b = Vector2( 171.09, 317.397 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 15.7332, 35.108 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 393.84, 51.68, 352.35, 313.9, 175.2, 313.25, 133.4, 49.69 )

[node name="Mundo4" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

[node name="cannon_cart" parent="." instance=ExtResource( 2 )]

[node name="floor" parent="." instance=ExtResource( 3 )]

[node name="limit" type="StaticBody2D" parent="."]

[node name="left_wall" type="Sprite" parent="limit"]
position = Vector2( -3.77, 222 )
rotation = 1.5708
scale = Vector2( 1, 0.3 )
texture = ExtResource( 4 )

[node name="right_wall" type="Sprite" parent="limit"]
position = Vector2( 1284.11, 222 )
rotation = 4.71239
scale = Vector2( 1, 0.3 )
texture = ExtResource( 4 )

[node name="uper_wall" type="Sprite" parent="limit"]
position = Vector2( 640, 0 )
scale = Vector2( 2.87, 0.35 )
texture = ExtResource( 4 )

[node name="left_wall_shape" type="CollisionShape2D" parent="limit"]
position = Vector2( 1.77017, 224.216 )
rotation = 1.5708
scale = Vector2( 1, 0.3 )
shape = SubResource( 1 )

[node name="uper_wall_shape" type="CollisionShape2D" parent="limit"]
position = Vector2( 640, 0 )
scale = Vector2( 2.87, 0.35 )
shape = SubResource( 2 )

[node name="right_wall_shape" type="CollisionShape2D" parent="limit"]
shape = SubResource( 3 )

[node name="web" type="Node2D" parent="."]
editor/display_folded = true

[node name="web_segment" type="RigidBody2D" parent="web"]
editor/display_folded = true
position = Vector2( 32.8355, 455.837 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="web/web_segment"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="web/web_segment"]
position = Vector2( -0.26355, -0.263519 )
shape = SubResource( 4 )

[node name="web_segment2" type="RigidBody2D" parent="web"]
editor/display_folded = true
position = Vector2( 103.868, 455.84 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="web/web_segment2"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="web/web_segment2"]
shape = SubResource( 4 )

[node name="web_segment3" type="RigidBody2D" parent="web"]
editor/display_folded = true
position = Vector2( 174.728, 455.84 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="web/web_segment3"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="web/web_segment3"]
shape = SubResource( 4 )

[node name="web_segment4" type="RigidBody2D" parent="web"]
editor/display_folded = true
position = Vector2( 245.728, 455.84 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="web/web_segment4"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="web/web_segment4"]
shape = SubResource( 4 )

[node name="web_segment5" type="RigidBody2D" parent="web"]
editor/display_folded = true
position = Vector2( 316.828, 455.84 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="web/web_segment5"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="web/web_segment5"]
shape = SubResource( 4 )

[node name="web_segment6" type="RigidBody2D" parent="web"]
editor/display_folded = true
position = Vector2( 388.048, 455.84 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="web/web_segment6"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="web/web_segment6"]
shape = SubResource( 4 )

[node name="web_segment7" type="RigidBody2D" parent="web"]
editor/display_folded = true
position = Vector2( 459.018, 455.84 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="web/web_segment7"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="web/web_segment7"]
shape = SubResource( 4 )

[node name="web_segment8" type="RigidBody2D" parent="web"]
editor/display_folded = true
position = Vector2( 530.368, 455.84 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="web/web_segment8"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="web/web_segment8"]
shape = SubResource( 4 )

[node name="web_segment9" type="RigidBody2D" parent="web"]
editor/display_folded = true
position = Vector2( 601.728, 455.84 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="web/web_segment9"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="web/web_segment9"]
shape = SubResource( 4 )

[node name="web_segment10" type="RigidBody2D" parent="web"]
editor/display_folded = true
position = Vector2( 672.888, 455.84 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="web/web_segment10"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="web/web_segment10"]
shape = SubResource( 4 )

[node name="web_segment11" type="RigidBody2D" parent="web"]
editor/display_folded = true
position = Vector2( 744.018, 455.84 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="web/web_segment11"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="web/web_segment11"]
shape = SubResource( 4 )

[node name="web_segment12" type="RigidBody2D" parent="web"]
editor/display_folded = true
position = Vector2( 814.968, 455.84 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="web/web_segment12"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="web/web_segment12"]
shape = SubResource( 4 )

[node name="web_segment13" type="RigidBody2D" parent="web"]
editor/display_folded = true
position = Vector2( 886.258, 455.84 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="web/web_segment13"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="web/web_segment13"]
shape = SubResource( 4 )

[node name="web_segment14" type="RigidBody2D" parent="web"]
editor/display_folded = true
position = Vector2( 957.181, 452.247 )
rotation = -0.0872665
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="web/web_segment14"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="web/web_segment14"]
shape = SubResource( 4 )

[node name="web_segment15" type="RigidBody2D" parent="web"]
editor/display_folded = true
position = Vector2( 1029.31, 446.235 )
rotation = -0.0872665
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="web/web_segment15"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="web/web_segment15"]
shape = SubResource( 4 )

[node name="web_segment17" type="RigidBody2D" parent="web"]
editor/display_folded = true
position = Vector2( 1101.93, 444.634 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="web/web_segment17"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="web/web_segment17"]
shape = SubResource( 4 )

[node name="web_segment18" type="RigidBody2D" parent="web"]
editor/display_folded = true
position = Vector2( 1173.25, 445.101 )
rotation = 0.00297201
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="web/web_segment18"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="web/web_segment18"]
shape = SubResource( 4 )

[node name="web_segment19" type="RigidBody2D" parent="web"]
editor/display_folded = true
position = Vector2( 1244.4, 445.577 )
rotation = 0.00297201
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="web/web_segment19"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="web/web_segment19"]
shape = SubResource( 4 )

[node name="1-2" type="PinJoint2D" parent="web"]
position = Vector2( 67.8077, 456.431 )
node_a = NodePath("../web_segment")
node_b = NodePath("../web_segment2")
softness = 0.1

[node name="2-3" type="PinJoint2D" parent="web"]
position = Vector2( 139.256, 456.49 )
node_a = NodePath("../web_segment2")
node_b = NodePath("../web_segment3")
softness = 0.1

[node name="3-4" type="PinJoint2D" parent="web"]
position = Vector2( 210.016, 456.49 )
node_a = NodePath("../web_segment3")
node_b = NodePath("../web_segment4")
softness = 0.1

[node name="4-5" type="PinJoint2D" parent="web"]
position = Vector2( 281.016, 456.49 )
node_a = NodePath("../web_segment4")
node_b = NodePath("../web_segment5")
softness = 0.1

[node name="5-6" type="PinJoint2D" parent="web"]
position = Vector2( 352.546, 456.49 )
node_a = NodePath("../web_segment5")
node_b = NodePath("../web_segment6")
softness = 0.1

[node name="6-7" type="PinJoint2D" parent="web"]
position = Vector2( 423.416, 456.49 )
node_a = NodePath("../web_segment6")
node_b = NodePath("../web_segment7")
softness = 0.1

[node name="7-8" type="PinJoint2D" parent="web"]
position = Vector2( 494.776, 456.49 )
node_a = NodePath("../web_segment7")
node_b = NodePath("../web_segment8")
softness = 0.1

[node name="8-9" type="PinJoint2D" parent="web"]
position = Vector2( 566.126, 456.49 )
node_a = NodePath("../web_segment8")
node_b = NodePath("../web_segment9")
softness = 0.1

[node name="9-10" type="PinJoint2D" parent="web"]
position = Vector2( 637.316, 456.49 )
node_a = NodePath("../web_segment9")
node_b = NodePath("../web_segment10")
softness = 0.1

[node name="10-11" type="PinJoint2D" parent="web"]
position = Vector2( 708.716, 456.49 )
node_a = NodePath("../web_segment10")
node_b = NodePath("../web_segment11")
softness = 0.1

[node name="11-12" type="PinJoint2D" parent="web"]
position = Vector2( 779.966, 456.49 )
node_a = NodePath("../web_segment11")
node_b = NodePath("../web_segment12")
softness = 0.1

[node name="12-13" type="PinJoint2D" parent="web"]
position = Vector2( 850.786, 456.49 )
node_a = NodePath("../web_segment12")
node_b = NodePath("../web_segment13")
softness = 0.1

[node name="13-14" type="PinJoint2D" parent="web"]
position = Vector2( 921.566, 455.95 )
node_a = NodePath("../web_segment13")
node_b = NodePath("../web_segment14")
softness = 0.1

[node name="14-15" type="PinJoint2D" parent="web"]
position = Vector2( 992.34, 449.586 )
node_a = NodePath("../web_segment14")
node_b = NodePath("../web_segment15")
softness = 0.1

[node name="15-16" type="PinJoint2D" parent="web"]
position = Vector2( 1066.37, 444.334 )
node_a = NodePath("../web_segment15")
node_b = NodePath("../web_segment17")
softness = 0.1

[node name="17-18" type="PinJoint2D" parent="web"]
position = Vector2( 1137.93, 444.626 )
node_a = NodePath("../web_segment17")
node_b = NodePath("../web_segment18")
softness = 0.1

[node name="18-19" type="PinJoint2D" parent="web"]
position = Vector2( 1209.08, 444.864 )
node_a = NodePath("../web_segment18")
node_b = NodePath("../web_segment19")
softness = 0.1

[node name="left_wall_anchor" type="StaticBody2D" parent="web"]
editor/display_folded = true
position = Vector2( -0.3, 455.84 )
rotation = 0.0685395
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="web/left_wall_anchor"]
shape = SubResource( 5 )

[node name="right_wall_anchor2" type="StaticBody2D" parent="web"]
editor/display_folded = true
position = Vector2( 1283.04, 445.96 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="web/right_wall_anchor2"]
shape = SubResource( 6 )

[node name="19-right_wall" type="PinJoint2D" parent="web"]
position = Vector2( 1282.15, 447.205 )
node_a = NodePath("../web_segment19")
node_b = NodePath("../right_wall_anchor2")
softness = 0.2

[node name="left_wall-1" type="PinJoint2D" parent="web"]
position = Vector2( 0, 456.09 )
node_a = NodePath("../left_wall_anchor")
node_b = NodePath("../web_segment")
softness = 0.2

[node name="MouseSpawner" parent="." instance=ExtResource( 6 )]
visible = false

[node name="trash_group" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 42.89, 55.71 )

[node name="aple" parent="trash_group" instance=ExtResource( 7 )]
position = Vector2( 81.2, 207.52 )

[node name="aple2" parent="trash_group" instance=ExtResource( 7 )]
position = Vector2( 172.47, 137.15 )

[node name="aple3" parent="trash_group" instance=ExtResource( 7 )]
position = Vector2( 509.58, 0 )

[node name="aple4" parent="trash_group" instance=ExtResource( 7 )]
position = Vector2( 677.96, 0 )

[node name="aple5" parent="trash_group" instance=ExtResource( 7 )]
position = Vector2( 1108.18, 0 )

[node name="banana" parent="trash_group" instance=ExtResource( 8 )]
position = Vector2( 753.684, 315.789 )

[node name="banana2" parent="trash_group" instance=ExtResource( 8 )]
position = Vector2( 44.2105, 335.789 )

[node name="banana3" parent="trash_group" instance=ExtResource( 8 )]
position = Vector2( 761.053, 100 )

[node name="banana4" parent="trash_group" instance=ExtResource( 8 )]
position = Vector2( 1062.11, 31.5789 )

[node name="banana5" parent="trash_group" instance=ExtResource( 8 )]
position = Vector2( 591.579, 3.1579 )

[node name="bottle" parent="trash_group" instance=ExtResource( 9 )]
position = Vector2( 1022.11, 227.368 )

[node name="bottle2" parent="trash_group" instance=ExtResource( 9 )]
position = Vector2( 1158.95, 134.737 )

[node name="bottle3" parent="trash_group" instance=ExtResource( 9 )]
position = Vector2( 698.947, 137.895 )

[node name="bottle4" parent="trash_group" instance=ExtResource( 9 )]
position = Vector2( 448.421, 185.263 )

[node name="bottle5" parent="trash_group" instance=ExtResource( 9 )]
position = Vector2( 153.684, 202.105 )

[node name="can" parent="trash_group" instance=ExtResource( 10 )]
position = Vector2( 1148.42, 226.316 )

[node name="can2" parent="trash_group" instance=ExtResource( 10 )]
position = Vector2( 796.842, 252.632 )

[node name="can3" parent="trash_group" instance=ExtResource( 10 )]
position = Vector2( 529.474, 234.737 )

[node name="can4" parent="trash_group" instance=ExtResource( 10 )]
position = Vector2( 21.0526, 269.474 )

[node name="can5" parent="trash_group" instance=ExtResource( 10 )]
position = Vector2( 175.789, 282.105 )

[node name="trashbag" parent="trash_group" instance=ExtResource( 11 )]
position = Vector2( 1150.53, 25.2632 )

[node name="trashbag2" parent="trash_group" instance=ExtResource( 11 )]
position = Vector2( 45.2632, 100 )

[node name="trashbag3" parent="trash_group" instance=ExtResource( 11 )]
position = Vector2( 117.895, 286.316 )

[node name="trashbag4" parent="trash_group" instance=ExtResource( 11 )]
position = Vector2( 1098.95, 120 )

[node name="trashbag5" parent="trash_group" instance=ExtResource( 11 )]
position = Vector2( 457.895, 82.1052 )

[node name="Trash_bins" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 12 )

[node name="trash_bin" type="StaticBody2D" parent="Trash_bins"]
position = Vector2( 195.947, 107.304 )
scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_group_": true
}

[node name="trashbin_sprite" type="Sprite" parent="Trash_bins/trash_bin"]
position = Vector2( 263.595, 185.45 )
texture = ExtResource( 13 )

[node name="base_sprite" type="Sprite" parent="Trash_bins/trash_bin"]
position = Vector2( 263.012, 359.236 )
scale = Vector2( 0.468959, 1 )
texture = ExtResource( 4 )

[node name="trash_bin_left_w" type="CollisionShape2D" parent="Trash_bins/trash_bin"]
shape = SubResource( 7 )

[node name="trash_bin_right_w3" type="CollisionShape2D" parent="Trash_bins/trash_bin"]
shape = SubResource( 8 )

[node name="trash_bin_lower_w2" type="CollisionShape2D" parent="Trash_bins/trash_bin"]
shape = SubResource( 9 )

[node name="base_shape" type="CollisionShape2D" parent="Trash_bins/trash_bin"]
position = Vector2( 262.422, 359.503 )
scale = Vector2( 7.02, 1 )
shape = SubResource( 10 )

[node name="trash_bin_area" type="Area2D" parent="Trash_bins/trash_bin"]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash_bins/trash_bin/trash_bin_area"]
shape = SubResource( 11 )

[node name="trash_collected_1" type="Label" parent="Trash_bins/trash_bin"]
margin_left = 253.74
margin_top = 344.17
margin_right = 293.74
margin_bottom = 375.17
custom_fonts/font = ExtResource( 14 )
text = "0"

[node name="trash_bin2" type="StaticBody2D" parent="Trash_bins"]
position = Vector2( 842.047, 107.304 )
scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_group_": true
}

[node name="trashbin_sprite" type="Sprite" parent="Trash_bins/trash_bin2"]
position = Vector2( 263.595, 185.45 )
texture = ExtResource( 15 )

[node name="base_sprite" type="Sprite" parent="Trash_bins/trash_bin2"]
position = Vector2( 263.012, 359.236 )
scale = Vector2( 0.468959, 1 )
texture = ExtResource( 4 )

[node name="trash_bin_left_w" type="CollisionShape2D" parent="Trash_bins/trash_bin2"]
shape = SubResource( 7 )

[node name="trash_bin_right_w3" type="CollisionShape2D" parent="Trash_bins/trash_bin2"]
shape = SubResource( 8 )

[node name="trash_bin_lower_w2" type="CollisionShape2D" parent="Trash_bins/trash_bin2"]
shape = SubResource( 9 )

[node name="base_shape" type="CollisionShape2D" parent="Trash_bins/trash_bin2"]
position = Vector2( 262.422, 359.503 )
scale = Vector2( 7.02, 1 )
shape = SubResource( 10 )

[node name="trash_bin2_area" type="Area2D" parent="Trash_bins/trash_bin2"]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash_bins/trash_bin2/trash_bin2_area"]
shape = SubResource( 11 )

[node name="trash_collected_2" type="Label" parent="Trash_bins/trash_bin2"]
margin_left = 253.61
margin_top = 343.99
margin_right = 293.61
margin_bottom = 408.99
custom_fonts/font = ExtResource( 14 )
text = "0
"

[node name="Timer" type="Timer" parent="Trash_bins"]
wait_time = 3.0
one_shot = true

[node name="speechbubble" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 1017.14, 442.598 )
texture = ExtResource( 16 )
script = ExtResource( 17 )

[node name="Label" type="Label" parent="speechbubble"]
margin_left = -232.0
margin_top = -94.0
margin_right = 196.0
margin_bottom = 91.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Objetivo: Coloca 8 piezas en cada
contenedor antes de que se ter_
mine el tiempo."

[node name="Timer" type="Timer" parent="speechbubble"]
wait_time = 4.0
one_shot = true
autostart = true

[node name="time_left" type="Label" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 74.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 5
text = "5:00"
script = ExtResource( 18 )

[node name="Timer" type="Timer" parent="time_left"]
wait_time = 360.0
one_shot = true
autostart = true

[node name="level_cleared_window" parent="." instance=ExtResource( 19 )]
pause_mode = 2
visible = false

[node name="reset_exit_window" parent="." instance=ExtResource( 20 )]
pause_mode = 2
visible = false
margin_left = 534.61
margin_top = 305.69
margin_right = 534.61
margin_bottom = 305.69
[connection signal="body_entered" from="Trash_bins/trash_bin/trash_bin_area" to="Trash_bins" method="_on_trash_bin_area_body_entered"]
[connection signal="body_exited" from="Trash_bins/trash_bin/trash_bin_area" to="Trash_bins" method="_on_trash_bin_area_body_exited"]
[connection signal="body_entered" from="Trash_bins/trash_bin2/trash_bin2_area" to="Trash_bins" method="_on_trash_bin2_area_body_entered"]
[connection signal="body_exited" from="Trash_bins/trash_bin2/trash_bin2_area" to="Trash_bins" method="_on_trash_bin2_area_body_exited"]
[connection signal="timeout" from="Trash_bins/Timer" to="Trash_bins" method="_on_Timer_timeout"]
[connection signal="timeout" from="speechbubble/Timer" to="speechbubble" method="_on_Timer_timeout"]
[connection signal="timeout" from="time_left/Timer" to="time_left" method="_on_Timer_timeout"]
